# skill-manager

./: CLAUDE.md  Cargo.toml  README.md
.claude/commands/cl/: commit.md  create_plan.md  debug.md  describe_pr.md  implement_plan.md  research_codebase.md
.scud/: config.toml
.taskmaster/docs/: plan-metadata-filtering.md
examples/community-repo-ci/: README.md  validate.sh
examples/community-repo-ci/.github/workflows/: validate-skills.yml
examples/gauntlet-ci/: CONTRIBUTING.md  validate-resources.sh
examples/gauntlet-ci/.github/workflows/: validate-resources.yml
src/: bundle.rs  config.rs  discover.rs  install.rs  install_manifest.rs  main.rs  manifest.rs  setup.rs  source.rs  target.rs
