[package]
name = "skill-manager"
version = "0.3.0"
edition = "2021"
description = "Manage AI coding tool skills for Claude, OpenCode, and Cursor"
license = "MIT"
repository = "https://github.com/pyrex41/skill-manager"
keywords = ["cli", "ai", "claude", "cursor", "skills"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "skm"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
walkdir = "2"
anyhow = "1"
thiserror = "1"
directories = "5"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
colored = "2"
git2 = "0.19"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"
